--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "license": "ISC",
   "devDependencies": {
     "stylelint": "^13.5.0",
+    "stylelint-config-prettier": "^8.0.1",
     "stylelint-config-standard": "^20.0.0",
+    "stylelint-prettier": "^1.1.2",
     "stylelint-scss": "^3.17.2",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
