--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack && cp src/index.html dist"
+    "build": "webpack && cp src/index.html dist",
+    "serve": "webpack-dev-server --config wds.config.js"
   },
   "repository": {
     "type": "git",
@@ -27,6 +28,7 @@
     "stylelint-scss": "^3.17.2",
     "stylelint-webpack-plugin": "^2.0.0",
     "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0"
   }
 }
