--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack && cp src/index.html dist",
-    "serve": "webpack-dev-server --config wds.config.js"
+    "serve": "webpack-dev-server --config wds.config.js --open"
   },
   "repository": {
     "type": "git",
