fixed most ESLint/Prettier issues w/ functions.js

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,8 @@
   "css.validate": false,
   "less.validate": false,
   "scss.validate": false,
-  /* "editor.codeActionsOnSave": {
+  "editor.codeActionsOnSave": {
     "source.fixAll.stylelint": true,
     "source.fixAll.eslint": true
-  } */
+  }
 }
