--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-prettier": "^3.1.3",
     "mini-css-extract-plugin": "^0.9.0",
+    "prettier": "2.0.5",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "stylelint": "^13.5.0",
